# MTRN4231_Project

./: .gitignore  README.md  chess_square.py  gui_test.py  robot arm movement steps.txt
chess_master_test/: master.py
chess_master_test/src/chess_master/: package.xml  setup.py
chess_master_test/src/chess_master/chess_master/: move_service.py
chess_master_test/src/interfaces/: CMakeLists.txt
chess_master_test/src/interfaces/srv/: ChessMove.srv
chess_master_test/src/ui/: package.xml  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gripper/share/gripper/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gripper/share/gripper/launch/: gripper_bringup.launch.py
install/ur5e_robot_config/share/ur5e_robot_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur5e_robot_config/share/ur5e_robot_config/cmake/: ur5e_robot_configConfig-version.cmake  ur5e_robot_configConfig.cmake
install/ur5e_robot_config/share/ur5e_robot_config/config/: controllers.yaml  end_effector_withDriverSupport.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml
install/ur5e_robot_config/share/ur5e_robot_config/environment/: ament_prefix_path.dsv  path.dsv
install/ur5e_robot_config/share/ur5e_robot_config/launch/: bringup.launch.py  fake_control_and_rsp.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py
install/ur5e_robot_config/share/ur5e_robot_config/urdf/: my_gripper.xacro  ur5e_with_tool.urdf.xacro
log/: latest_build
src/arm_controller/: CMakeLists.txt  README.md  package.xml
src/arm_controller/config/: kinematics.yaml
src/arm_controller/launch/: arm_controller.launch.py  arm_controller_with_moveit_params.launch.py  bringup_fake_and_arm.launch.py  bringup_moveit_ur5e.launch.py  bringup_ur5e_full.launch.py  moveit_constrain_launch.py  moveit_rviz.launch.py
src/arm_controller/src/: arm_controller_node.cpp
src/arm_controller/srdf/: ur5e_with_tool.srdf
src/arm_controller/urdf/: ur5e_with_tool.urdf.xacro
src/arm_interfaces/: CMakeLists.txt
src/arm_interfaces/action/: PickPlace.action
src/brain/: package.xml  setup.cfg  setup.py
src/brain/brain/: coordinator.py
src/chess_arm_executor/: CMakeLists.txt
src/chess_arm_executor/config/: chess_arm_executor.yaml
src/chess_arm_executor/launch/: chess_arm_executor.launch.py
src/chess_arm_executor/src/: arm_controller_node.cpp
src/chess_master/: package.xml  setup.cfg  setup.py
src/chess_master/chess_master/: move_service.py
src/custom_interfaces/: CMakeLists.txt
src/end_effector_description/: CMakeLists.txt  package.xml
src/end_effector_description/etc/: robot_calibration.yaml
src/end_effector_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/end_effector_description/install/end_effector_description/share/ament_index/resource_index/package_run_dependencies/: end_effector_description
src/end_effector_description/install/end_effector_description/share/ament_index/resource_index/parent_prefix_path/: end_effector_description
src/end_effector_description/install/end_effector_description/share/end_effector_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.zsh
src/end_effector_description/install/end_effector_description/share/end_effector_description/cmake/: end_effector_descriptionConfig-version.cmake  end_effector_descriptionConfig.cmake
src/end_effector_description/install/end_effector_description/share/end_effector_description/environment/: ament_prefix_path.dsv  path.dsv
src/end_effector_description/install/end_effector_description/share/end_effector_description/etc/: robot_calibration.yaml
src/end_effector_description/install/end_effector_description/share/end_effector_description/launch/: auxiliary.launch.py
src/end_effector_description/install/end_effector_description/share/end_effector_description/rviz/: end_effector_only.rviz  end_effector_withModel.rviz
src/end_effector_description/install/end_effector_description/share/end_effector_description/urdf/: end_effector_withDriverSupport.xacro
src/end_effector_description/launch/: auxiliary.launch.py  display.launch.py  display_ee.launch.py
src/end_effector_description/log/: latest_build
src/end_effector_description/meshes/: claw_assembly.stl
src/end_effector_description/rviz/: default.rviz  ee.rviz  end_effector_only.rviz  end_effector_withModel.rviz
src/end_effector_description/urdf/: end_effector.urdf.xacro  end_effector.xacro  end_effector_standalone.urdf.xacro  end_effector_withDriverSupport.xacro
src/gripper/: README.md  package.xml  setup.cfg  setup.py
src/gripper/gripper/: gripper_bridge_node.py  gripper_client.py  gripper_server.py
src/gripper/launch/: gripper_bridge.launch.py  gripper_bringup.launch.py
src/interfaces/: package.xml
src/interfaces/srv/: ChessMove.srv
src/move_to_marker/: CMakeLists.txt  Readme.md  package.xml
src/move_to_marker/launch/: bringup_moveit_ur5e.launch.py
src/move_to_marker/src/: move_to_pose.cpp
src/ui/: package.xml  setup.cfg  setup.py
src/ui/ui/: board_state_sub.py  user_interface.py
src/ur5e_robot_config/: CMakeLists.txt  package.xml  setup_assistant.txt
src/ur5e_robot_config/config/: controllers.yaml  end_effector_withDriverSupport.srdf  joint_limits.yaml  moveit.rviz
src/ur5e_robot_config/launch/: bringup.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py
src/ur5e_robot_config/urdf/: my_gripper.xacro  ur5e_with_tool.urdf.xacro
stockfish/scripts/: get_native_properties.sh  net.sh
stockfish/wiki/: Advanced-topics.md  Compiling-from-source.md  Developers.md  Download-and-usage.md  Governance-and-responsibilities.md  Home.md  Regression-Tests.md  Stockfish-FAQ.md  Terminology.md  UCI-&-Commands.md  Useful-data.md
(+261 files in other folders)
