<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="z5422416@ad.unsw.edu.au">ryanl</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>custom_interfaces</depend>

  <depend>ros_ur_driver</depend>
  <depend>moveit_visual_tools</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- MoveIt runtime -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>

  <!-- UR description (if you use its macros) -->
  <exec_depend>ur_description</exec_depend>

  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
