<?xml version="1.0"?>
<package format="3">
  <name>gripper</name>
  <version>0.1.0</version>
  <description>Serial gripper action bridge</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclpy_action</exec_depend>
  <exec_depend>pyserial</exec_depend>
  <depend>custom_interfaces</depend> <!-- or whatever provides GripperCommand -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
