<?xml version="1.0"?>
<package format="3">
  <name>ur5e_robot_config</name>
  <version>0.0.1</version>
  <description>UR5e MoveIt + ROS2 control bringup.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch/runtime deps -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <!-- MoveIt 2 -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>

  <!-- Robot description stack -->
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ur_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
